<resources>
    <string name="app_name">Netflix and chill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_image">logo image</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="get_started">Let\'s Explore Movie</string>
    <string name="in_one_apps">in one apps</string>
    <string name="explore_movie">Explore Movie</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="content">content</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
</resources>