<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context="id.synergy.NotesApps.ui.LoginFragment">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/netflix_logo"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/main_edit_text"
        android:hint="@string/email"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textColorHint="@color/white"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/main_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="24dp"
        android:textColorHint="@color/white"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>